to add new functions

--- a/templates/db4.html
+++ b/templates/db4.html
@@ -88,6 +88,18 @@
         </div>
     </div>
 </div>
+</div>
+<div class="ggg">
+<form method="POST" action="/doc" >
+<label for="username">Username:</label>
+<input type="text"  placeholder="Enter Patient's Username" name="email">
+<br><p></p>
+<label for="OPT">OTP:    </label>
+<input type="tel" placeholder="Enter OPT" name="id"><p><br></p>
+<a href="" class="button" id="btn" >    <h2>     </h2>          View Details         <h2>   </h2></a>
+</form>
+
+</div>
 
 
 <div class="dashboard-container">
