--- a/templates/pd2.html
+++ b/templates/pd2.html
@@ -234,9 +234,9 @@ h1, h2, h3 {
         <form method="POST" enctype="multipart/form-data" action="{{ url_for('upload') }}">
             <input type="file" name="image" id="image">
             <br>
-            <label for="comment">Comment (optional):</label>
+            <label for="comment">Date:</label>
             <input type="text" name="disease" id="disease">
-            <label for="comment">Comment (optional):</label>
+            <label for="comment">Disease:</label>
             <input type="text" name="date" id="date">
             <br>
             <button type="submit">Upload</button>
